kubernetes/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APPLICATION_NAME}-service-redis
spec:
  type: ClusterIP
  ports:
    - targetPort: 6379
      port: 6379
  selector:
    app: ${APPLICATION_NAME}-redis
