kubernetes/route-http.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ${APPLICATION_NAME}-route-http
spec:
  to:
    kind: Service
    name: ${APPLICATION_NAME}-service-http
    weight: 100
  port:
    targetPort: 8182
  wildcardPolicy: None
